# zlib-1.2.8

./: CMakeLists.txt  main.c  make.txt  zlib_1.2.8
output/unix/lib/: libzlib.dylib
outputs/: Makefile  cmake_install.cmake  zlib_1_2_8.cbp
outputs/debug/lib/: libzlib.dylib
outputs/lib/apple/: libzlib.dylib
src/: adler32.c  compress.c  crc32.c  deflate.c  gzclose.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  main.c  trees.c  uncompr.c  zutil.c
zlib_1.2.8.dSYM/Contents/: Info.plist
zlib_1.2.8.dSYM/Contents/Resources/DWARF/: zlib_1.2.8
